--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,10 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:largeHeap="true"
         android:theme="@style/AppTheme">
         <activity
             android:name=".ui.Activities.HomeActivity"
-            android:configChanges="orientation|screenSize"
             android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,12 +22,10 @@
         </activity>
         <activity
             android:name=".ui.Activities.RecipeDetailsActivity"
-            android:configChanges="orientation|screenSize"
             android:launchMode="singleTask"
             android:parentActivityName=".ui.Activities.HomeActivity" />
         <activity
             android:name=".ui.Activities.StepDetailsActivity"
-            android:configChanges="orientation|screenSize"
             android:launchMode="singleTask"
             android:parentActivityName=".ui.Activities.RecipeDetailsActivity" />
 
